# python-backend-template

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.gitconfig/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: docker-build-dev.yml  docker-build-production.yml  lint.yml
configs/: logger.json
deployment/: Dockerfile  create-ssl-certificate.sh  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  entrypoint.sh
deployment/redis/: redis.conf
deployment/traefik/: config.yml  traefik.yml
graphdata/IAM/nodes/: SCOPE.csv  USERGROUP.csv
graphdata/IAM/relationships/: ALLOWS.csv
migrations/: env.py
migrations/versions/: 2022_11_24_1909-a4af32a9e2d1_add_user_table.py  2022_11_24_1910-1706f53514ec_add_article_table.py  2022_11_24_1911-9f03ce0b90ec_add_comment_table.py  2023_09_23_1526-158c4487d39e_init_migrations.py
src/: __main__.py  app.py  cli.py  main.py
src/core/base/: repository.py
src/core/celery_app/: celery.py
src/core/config/: __init__.py  config.py
src/core/persistence/: __init__.py  cache.py  db.py  redis.py  s3.py
src/domains/: __init__.py
src/domains/article/: __init__.py  controller.py  domain_builder.py  repository.py
src/domains/base/: controller.py  repository.py  service.py
src/domains/image/: __init__.py  controller.py  domain_builder.py  repository.py
src/domains/oauth/: __init__.py  controller.py  domain_builder.py  repository.py  service.py
src/domains/user/: __init__.py  controller.py  domain_builder.py  graph_repository.py  repository.py
src/injected/: __init__.py  app_environment.py  domain_holder.py  sso_holder.py
src/lib/: pagination.py  sentry.py
src/lib/enums/: __init__.py  base.py  iam.py  language.py  pagination.py
src/lib/errors/: __init__.py  article.py  base.py  image.py  oauth.py  pagination.py
src/lib/errors/internal/: __init__.py  redisgraph.py
src/lib/errors/web/: __init__.py  article.py  base.py  image.py  oauth.py  pagination.py  user.py
src/lib/logger/: setup.py
src/lib/middlewares/: logger.py  setup.py
src/lib/models/: __init__.py  article.py  base.py  mixins.py  user.py
src/lib/providers/: __init__.py  dummies.py  setup.py
src/lib/routers/: article.py  image.py  oauth.py  setup.py  user.py  v1.py
src/lib/schemas/: __init__.py  article.py  base.py  iam.py  image.py  jwt.py  logger.py  pagination.py  s3.py  user.py
src/lib/security/: __init__.py  oauth.py
src/lib/utils/: __init__.py  i18n.py  time.py
src/lib/utils/redisgraph/: bulk_insert.py  bulk_update.py  config.py  entity_file.py  label.py  query_buffer.py  relation_type.py
src/tests/: conftest.py  load_fixtures.py
src/tests/api/v1/: test_article.py  test_oauth.py  test_user.py
src/tests/fixtures/: load_articles.py  load_users.py
