[tool.poetry]
name = "python-backend-template"
version = "1.4.2"
description = ""
authors = ["Artem Hrytsenko"]

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI
fastapi = "^0.101.0"
pydantic = "^2.1.1"
python-multipart = "^0.0.5"
uvicorn = { extras = ["standard"], version = "^0.23.2" }

# Database
SQLAlchemy = {extras = ["mypy"], version = "^2.0.12"}
asyncpg = "^0.28.0"
alembic = "^1.11.2"
python-dateutil = "^2.8.2"

# S3
boto3 = "^1.28.25"

# Security
passlib = {extras = ['bcrypt'], version = '^1.7.4'}
python-jose = {extras = ['cryptography'], version = '^3.1.0'}
cryptography = "^41.0.3"
redis = {extras = ['hiredis'], version = "^4.5.4" }

# Utils
python-slugify = "^8.0.1"
sentry-sdk = "^1.29.2"
pathos = "^0.3.1"
celery = "^5.2.7"
httpx = "^0.24.1"
pytest = "^7.4.0"
pillow = "^10.0.0"
pydantic-settings = "^2.0.2"
beautifulsoup4 = "^4.12.2"
cloudscraper = "^1.2.71"
aiofiles = "^23.2.1"
fastapi-sso = "^0.7.2"
imgkit = "^1.2.3"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.5.0"
pycln = "^2.2.2"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.4.0"
flake8-pytest-style = "^1.6.0"
flake8-spellcheck = "^0.28.0"
pep8-naming = "^0.13.2"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.12"}
pytest = "^7.2.1"
boto3-stubs = {extras = ['s3'], version = '^1.29.1'}
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
types-aiofiles = "^23.2.0.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pycln]
expand-stars = true

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
check_untyped_defs = true
disallow_any_explicit = false
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
show_error_codes = true
no_implicit_optional = false
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = false
warn_return_any = true
strict = true
exclude = "venv|migrations|tests"
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
line_length = 80
atomic = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
skip_glob = "**/__init__.py"

[[tool.mypy.overrides]]
module = "src.lib.utils.redisgraph.*"
ignore_errors = true
